# allin

./: .gitignore  LICENSE  Notes.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
docs/: index.html
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  session.rs
src-tauri/src/bots/: archetypes.rs  mod.rs
src-tauri/src/poker/: cards.rs  deck.rs  equity.rs  hand.rs  mod.rs  outs.rs  range.rs
src/api/: tauri.ts
src/components/: AboutModal.tsx  BotIntelPanel.tsx  EvCoachPanel.tsx  HandHistory.tsx  MathExplainer.tsx  PokerTable.tsx  RangeMatrix.tsx  SessionSummaryModal.tsx  TableCard.tsx
src/components/lesson/: BankrollLesson.tsx  BlockersLesson.tsx  BoardTextureLesson.tsx  BuildBestHandLesson.tsx  CbetLesson.tsx  CombosLesson.tsx  ExploitLesson.tsx  GlossaryTerm.tsx  HandRankingLesson.tsx  LessonContent.tsx  PlayingCard.tsx  PositionLesson.tsx  PotOddsLesson.tsx  QuizPracticeNav.tsx  RangeMatrixLesson.tsx  quizBanks.ts
src/hooks/: useCurriculum.ts  useGame.ts
src/styles/: global.css
src/tabs/: PlayTab.tsx  StudyTab.tsx
