[package]
name = "all-in"
version = "0.1.1"
description = "All-In Poker Training App"
authors = ["you"]
edition = "2021"

[lib]
name = "all_in_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "2"
rfd = "0.15"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
